//package com.cloud.staff.netty_protobuf;
syntax = "proto3";
option java_package = "com.cloud.staff.netty_protobuf.protobufbean";
option java_outer_classname = "SubscribeReqProto";

message SubscribeReq{

   int32 subReqId = 1;
   string userName = 2;
   string productName =3;
   repeated string address=4;

}
